--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Amrit Bhatia, Zhe Chen, Janhavi Suresh Mahajan, Bowen Zhang",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.6.6",
+    "angular-route": "^1.6.6",
     "bluebird": "^3.5.1",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
