--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "angular": "^1.6.6",
     "angular-route": "^1.6.6",
     "bluebird": "^3.5.1",
+    "bootstrap": "^3.3.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "jquery": "^3.2.1",
+    "jquery-match-height": "^0.7.2",
     "mysql2": "^1.5.0",
     "passport": "^0.4.0"
   }
