--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^3.3.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jquery-match-height": "^0.7.2",
     "mysql2": "^1.5.0",
