--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jquery-match-height": "^0.7.2",
+    "jquery-ui-dist": "^1.12.1",
     "mysql2": "^1.5.0",
     "passport": "^0.4.0"
   }
