--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.6.6",
+    "angular-rateit": "^4.0.1",
     "angular-route": "^1.6.6",
     "bluebird": "^3.5.1",
     "bootstrap": "^3.3.7",
