--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery-match-height": "^0.7.2",
     "jquery-ui-dist": "^1.12.1",
     "mysql2": "^1.5.0",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
