--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "angular": "^1.6.6",
     "angular-rateit": "^4.0.1",
     "angular-route": "^1.6.6",
+    "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
     "bootstrap": "^3.3.7",
     "express": "^4.16.2",
