--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.7.1",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
